<resources>
    <string name="app_name">Motion Prediction</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_photos">Players</string>
    <string name="nav_movies">Profile</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Photos</item>
        <item>Movies</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_data_to_show">No Data To Show</string>
    <string name="main_text"><![CDATA[manage your team & skills]]></string>
    <string name="second_text">Team management and skill Tracking made easy</string>
    <string name="btn_get_started_title">Get Started</string>
    <string name="img_login">img_login</string>
    <!-- SignInActivity-->
    <string name="welcome_nback">Welcome\nBack</string>
    <string name="edt_email">Email</string>
    <string name="edt_name">Name</string>
    <string name="edt_password">Password</string>
    <string name="sign_b_in_b">Sign <b>In</b></string>
    <string name="signup">Sign Up</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="coach">Coach</string>
    <string name="Player">Player</string>

    <!--  Team Activity  -->
    <string name="edt_addTeam">Team Name</string>
    <string name="add_nTeam">ADD\n TEAM</string>
</resources>